--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -406,6 +406,8 @@
 		<string>Mac-7BA5B2D9E42DDD94</string>
 		<key>BoardManufacturer</key>
 		<string>Apple Inc.</string>
+		<key>BoardSerialNumber</key>
+		<string>C02713701GUJG361M</string>
 		<key>BoardType</key>
 		<integer>10</integer>
 		<key>BoardVersion</key>
@@ -441,6 +443,10 @@
 		<string>0xFFFF</string>
 		<key>ProductName</key>
 		<string>iMacPro1,1</string>
+		<key>SerialNumber</key>
+		<string>C02THCYBHX87</string>
+		<key>SmUUID</key>
+		<string>5BBC8B53-B54C-419A-B0AF-4D07933FF58B</string>
 		<key>Version</key>
 		<string>1.0</string>
 	</dict>
